--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -23,7 +23,7 @@ set-option -g bell-action none
 set -s escape-time 0
 
 set-window-option -g mode-keys vi
-bind C-[ copy-mode
+bind Escape copy-mode
 
 set-option -g display-panes-time 60000
 
@@ -38,14 +38,7 @@ bind % split-window -c '#{pane_current_path}' -h
 set-hook -g session-created "rename-session '#{host_short}-#{session_name}'"
 
 # status style
-set -g status-style fg=black,bold,bg='#aaaa00'
-set -g message-style fg=black,bg='#ffaa00'
-if-shell "test -z \"$LIGHT_TERM\" -o \"$LIGHT_TERM\" = 0" {
-  # dark term
-  set -g pane-border-style fg='#222222'
-  set -g pane-active-border-style fg='#aabb00'
-} {
-  # bright term
-  set -g pane-border-style fg='#eeeeee'
-  set -g pane-active-border-style fg='#aabb00'
-}
+set -g status-style fg=2,bg=0
+set -g message-style fg=0,bg=3
+set -g pane-border-style fg=0
+set -g pane-active-border-style fg=2
