tmux - add nice status line

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,3 +42,42 @@ set -g status-style fg=2,bg=0
 set -g message-style fg=0,bg=3
 set -g pane-border-style fg=0
 set -g pane-active-border-style fg=2
+
+set -g @lsep ""
+set -g @msep "#[none]▌#[none]"
+set -g @rsep ""
+
+# Some unicode symbols
+# ➕ ↕◱ ⛶ ⤢  ▌
+
+# powerline symbols (need powerline-patched fonts)
+#                
+
+set -g @F "#{?window_zoomed_flag, ⤢,}"
+
+set -g @clbg "brightgreen"
+set -g @clfg "#000000"
+set -g @crbg "green"
+set -g @crfg "#000000"
+set -g @cL "#[fg=#{@clbg}]#{@lsep}#[fg=#{@clfg},bg=#{@clbg},bold]#I"
+set -g @cM "#[fg=#{@clbg},bg=#{@crbg}]#{@msep}"
+set -gF @cR "#[fg=#{@crfg},bg=#{@crbg},bold]##W#{@F}#[none]#[bg=default,fg=#{@crbg}]#{@rsep}"
+set -gF window-status-current-format "#{@cL}#{@cM}#{@cR}"
+
+set -g @slbg "#555555"
+set -g @slfg "#000000"
+set -g @sllbg "green"
+set -g @sllfg "#000000"
+set -g @srbg "#000000"
+set -g @srfg "2"
+
+set -gF @sLLast "#[fg=#{@sllbg}]#{@lsep}#[fg=#{@sllfg},bg=#{@sllbg}]"
+set -gF @sLNormal "#[fg=#{@slbg}]#{@lsep}#[fg=#{@slfg},bg=#{@slbg}]"
+set -gF @sMLast "#[fg=#{@sllbg},bg=#{@srbg}]"
+set -gF @sMNormal "#[fg=#{@slbg},bg=#{@srbg}]"
+
+#set -gF @sL "#{?window_last_flag,#{@sLLast},#{@sLNormal}}"
+set -g @sL "#{?window_last_flag,#{@sLLast},#{@sLNormal}}#I"
+set -g @sM "#{?window_last_flag,#{@sMLast},#{@sMNormal}}#{@msep}"
+set -gF @sR "#[fg=#{@srfg},bg=#{@srbg}]##W#{@F}#[none]#[bg=default,fg=#{@srbg}]#{@rsep}"
+set -gF window-status-format "#{@sL}#{@sM}#{@sR}"
