--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,6 @@
+set -as terminal-features ",*:256"
+set -g default-terminal "tmux-256color"
+
 bind C-h select-pane -L
 bind C-j select-pane -D
 bind C-k select-pane -U
